# BoostChain

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md  test_result  修改建议.md
cc-make/: CMakeLists.txt  CMakePresets.json  vcpkg.json
cc-make/src/: cc_make.cpp  main.cpp
cc-make/src/api/: claude_client.cpp  claude_client.hpp  errors.cpp  errors.hpp  http_transport.cpp  http_transport.hpp  messages.cpp  messages.hpp  provider.cpp  provider.hpp  sse_parser.cpp  sse_parser.hpp  types.cpp  types.hpp
cc-make/src/app/: app_state.cpp  app_state.hpp  cli.cpp  cli.hpp  commands.cpp  commands.hpp  repl.cpp  repl.hpp
cc-make/src/auth/: api_key.hpp  auth.cpp  auth.hpp
cc-make/src/config/: claude_md.cpp  claude_md.hpp  config.cpp  config.hpp  config_loader.cpp  config_loader.hpp  settings.cpp  settings.hpp
cc-make/src/core/: error.cpp  error.hpp  json_utils.hpp  result.hpp  string_utils.cpp  string_utils.hpp  types.cpp  types.hpp
cc-make/src/git/: git.cpp  git.hpp
cc-make/src/mcp/: client.cpp  client.hpp  config.cpp  config.hpp  json_rpc.cpp  json_rpc.hpp  tool_bridge.cpp  tool_bridge.hpp  transport.cpp  transport.hpp  types.hpp
cc-make/src/permissions/: permission_manager.cpp  permission_manager.hpp  permissions.cpp  permissions.hpp
cc-make/src/query/: agentic_loop.cpp  agentic_loop.hpp  compaction.cpp  compaction.hpp  context.cpp  context.hpp  query_engine.cpp  query_engine.hpp  tool_executor.cpp  tool_executor.hpp  types.hpp
cc-make/src/session/: session.cpp  session.hpp
cc-make/src/terminal/: alternatescreen.hpp  ansi.hpp  color.hpp  input.cpp  input.hpp  keybinding.cpp  keybinding.hpp  raw_mode.cpp  raw_mode.hpp  renderer.cpp  renderer.hpp  screen.cpp  screen.hpp  style_pool.cpp  style_pool.hpp  theme.cpp  theme.hpp  vim_mode.cpp  vim_mode.hpp
cc-make/src/tools/: registry.cpp  registry.hpp  tool.hpp
cc-make/src/tools/agent/: agent_tool.cpp  agent_tool.hpp
cc-make/src/tools/ask/: ask_question_tool.cpp  ask_question_tool.hpp
cc-make/src/tools/bash/: bash_tool.cpp  bash_tool.hpp
cc-make/src/tools/brief/: brief_tool.cpp  brief_tool.hpp
cc-make/src/tools/file/: edit_tool.cpp  edit_tool.hpp  read_tool.cpp  read_tool.hpp  write_tool.cpp  write_tool.hpp
cc-make/src/tools/search/: glob_tool.cpp  glob_tool.hpp  grep_tool.cpp  grep_tool.hpp
cc-make/src/tools/todo/: todo_tool.cpp  todo_tool.hpp
cc-make/src/tools/web/: web_fetch_tool.cpp  web_fetch_tool.hpp  web_search_tool.cpp  web_search_tool.hpp
cc-make/src/tools/worktree/: worktree_tool.cpp  worktree_tool.hpp
cc-make/src/ui/: component.cpp  component.hpp  layout.cpp  layout.hpp  markdown.cpp  markdown.hpp  output.cpp  output.hpp  permission_dialog.cpp  permission_dialog.hpp  prompt_input.cpp  prompt_input.hpp  streaming_renderer.cpp  streaming_renderer.hpp  tree_renderer.cpp  tree_renderer.hpp  virtual_scroll.cpp  virtual_scroll.hpp
cc-make/src/utils/: filesystem.cpp  filesystem.hpp  platform.hpp  process.cpp  process.hpp
cc-make/tests/: CMakeLists.txt  test_integration.cpp  test_main.cpp
cc-make/tests/api/: test_api_integration.cpp  test_claude_client.cpp  test_errors.cpp  test_http_transport.cpp  test_messages.cpp  test_provider.cpp  test_sse_parser.cpp
cc-make/tests/app/: test_commands.cpp  test_repl.cpp
cc-make/tests/auth/: test_auth.cpp
cc-make/tests/config/: test_config.cpp  test_config_loader.cpp
cc-make/tests/core/: test_json_utils.cpp  test_result.cpp  test_string_utils.cpp
cc-make/tests/git/: test_git.cpp
cc-make/tests/mcp/: test_client.cpp  test_config.cpp  test_json_rpc.cpp  test_tool_bridge.cpp  test_transport.cpp
cc-make/tests/permissions/: test_permission_manager.cpp  test_permissions.cpp
cc-make/tests/query/: test_agentic_loop.cpp  test_compaction.cpp  test_context.cpp  test_query_engine.cpp  test_query_integration.cpp  test_tool_executor.cpp
cc-make/tests/session/: test_session.cpp
cc-make/tests/terminal/: test_ansi.cpp  test_color.cpp  test_input.cpp  test_keybinding.cpp  test_renderer.cpp  test_screen.cpp  test_style_pool.cpp  test_theme.cpp  test_vim_mode.cpp
cc-make/tests/tools/: test_tool_integration.cpp
cc-make/tests/tools/agent/: test_agent_tool.cpp
cc-make/tests/tools/ask/: test_ask_question_tool.cpp
cc-make/tests/tools/bash/: test_bash_tool.cpp
cc-make/tests/tools/brief/: test_brief_tool.cpp
cc-make/tests/tools/file/: test_edit_tool.cpp  test_read_tool.cpp  test_write_tool.cpp
cc-make/tests/tools/search/: test_glob_tool.cpp  test_grep_tool.cpp
cc-make/tests/tools/todo/: test_todo_tool.cpp
cc-make/tests/tools/web/: test_web_fetch_tool.cpp  test_web_search_tool.cpp
cc-make/tests/tools/worktree/: test_worktree_tool.cpp
cc-make/tests/ui/: test_component.cpp  test_layout.cpp  test_markdown.cpp  test_output.cpp  test_permission_dialog.cpp  test_prompt_input.cpp  test_streaming_renderer.cpp  test_tree_renderer.cpp  test_virtual_scroll.cpp
cc-make/tests/utils/: test_filesystem.cpp  test_process.cpp
docs/plans/: 2026-03-26-boostchain-design.md  2026-03-26-boostchain-implementation.md
examples/: CMakeLists.txt
examples/simple_chain/: CMakeLists.txt  main.cpp
include/boostchain/: agent.hpp  boostchain.hpp  chain.hpp  config.hpp  error.hpp  executor.hpp  http_client.hpp  llm_provider.hpp  memory.hpp  prompt.hpp  result.hpp  tool.hpp  version.hpp
include/boostchain/llm/: claude_provider.hpp  gemini_provider.hpp  openai_compatible.hpp  openai_provider.hpp
src/: agent.cpp  chain.cpp  error.cpp  executor.cpp  http_client.cpp  memory.cpp  prompt.cpp  tool.cpp
src/llm/: claude_provider.cpp  gemini_provider.cpp  openai_compatible.cpp  openai_provider.cpp
tests/integration/: CMakeLists.txt  test_claude_provider.cpp  test_gemini_provider.cpp  test_openai_compatible.cpp  test_openai_provider.cpp
tests/unit/: CMakeLists.txt  test_agent.cpp  test_chain.cpp  test_error.cpp  test_executor.cpp  test_http_client.cpp  test_llm_provider_interface.cpp  test_memory.cpp  test_prompt.cpp  test_result.cpp  test_tool.cpp
